# vericlaw

./: .env.example  .gitignore  .pre-commit-config.yaml  .proof-baseline.json  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.ci  Dockerfile.dev  Dockerfile.release  Dockerfile.runtime  LICENSE  Makefile  README.md  README.txt  SECURITY.md  VERICLAW_DEEP_DIVE.md  VERICLAW_REENGINEERING_PLAN.md  alire.toml  b__main.adb  b__main.ads  docker-compose.secure.yml  docker-compose.yml  install.sh  package-lock.json  package.json  quasar_claw.gpr  spark.adc  vericlaw.gpr
alire/: build_hash_inputs  settings.toml
bridge-common/: index.js
browser-bridge/: README.md  index.js  package-lock.json  package.json  test.js
config/: anywhere_v1_competitive_baseline.toml  anywhere_v2_competitive_baseline.toml  bootstrap_secure_defaults.env  borrow_acceptance_criteria.toml  borrow_matrix_scintilla_vortex.csv  config.example.json  email.example.json  expansion_targets.toml  feature_gap_matrix.csv  gnatcheck.rules  matrix.example.json  mcp.example.json  memory.db  memory.db-shm  memory.db-wal  openai-compatible.example.json  rag.example.json  security_slos.toml  slack.example.json  threat_model.toml  vericlaw_config.ads  vericlaw_config.gpr  vericlaw_config.h  whatsapp.example.json
discord-bridge/: Dockerfile  index.js  package.json  test.js
docs/: README.md  ada-coding-practices.md  benchmarks.md  channels.md  getting-started.md  installation.md  operations.md  pi-deployment.md  project-overview.md  providers.md  security-proofs.md  testing.md  tools.md  troubleshooting.md
email-bridge/: Dockerfile  index.js  package.json  test.js
future/: README.md
irc-bridge/: Dockerfile  index.js  package.json
matrix-bridge/: Dockerfile  index.js  package-lock.json  package.json  test.js
mcp-bridge/: Dockerfile  index.js  package.json
operator-console/: app.js  index.html  styles.css
vericlaw-signal/: Cargo.toml  README.md
vericlaw-signal/.cargo/: config.toml
vericlaw-signal/src/: main.rs
(+442 files in other folders)
